[project]
name = "bondscalc-online"
version = "1.1.0"
requires-python = ">=3.14"
dependencies = [
    "dash~=3.3.0",
    "dash-bootstrap-components~=2.0.4",
    "pandas~=2.3.3",
    "requests~=2.32.5",
    "Flask-APScheduler~=1.13.1",
]

[dependency-groups]
dev = [
    "pandas-stubs~=2.3.3",
]
production = [
    "gunicorn~=23.0.0"
]
